# llm-gateway

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  config_cli.py  env.example  llm-gateway-combicode.txt  llm-gateway-technical-specification.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.bat  start_server.py  supabase_db.sql  tatus --porcelain
.github/workflows/: ci.yml
app/: config.py  dependencies.py  main.py
app/config/: __init__.py  environment.py  secrets.py  settings.py  utils.py
app/db/: async_postgres_client.py  supabase_client.py
app/health/: __init__.py  health_checks.py
app/middleware/: auth.py  rate_limit.py
app/models/: schemas.py
app/monitoring/: callbacks.py  langfuse_client.py  prometheus_metrics.py
app/routers/: api.py
app/services/: billing_service.py  litellm_service.py
app/utils/: exceptions.py  logging.py  redis_client.py  retry.py
deployments/: Dockerfile  backup.sh  crontab  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  firewall-setup.sh  health-monitor.sh  llm-gateway.service  logrotate.conf  nginx.conf  ssl-setup.sh  start.sh  stop.sh  test_request.json
deployments/k8s/: deployment.yaml  secrets.yaml
deployments/monitoring/: alertmanager.yml  grafana-dashboard.json  prometheus-rules.yml  prometheus.yml
docs/: .gitkeep  API_REFERENCE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION.md  INDEX.md  NAVIGATION.md  QUICKSTART.md  STRUCTURE.md
scripts/: README.md  check_documentation.py  clean_project.py  pre_commit_hook.py
tests/: README.md  conftest.py  utils.py
tests/unit/: test_billing_service.py
